fixed the viewport issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,3 +130,9 @@ h1 {
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 599px) {
+    * {
+        max-width: 100vw;
+    }
+}
